--- a/requirements.txt
+++ b/requirements.txt
@@ -1,150 +1,11 @@
-altair==5.4.1
-amqp==5.2.0
-annotated-types==0.7.0
-anthropic==0.49.0
-anyio==4.9.0
-asgiref==3.8.1
-asttokens==2.4.1
-attrs==24.2.0
-backcall==0.2.0
-beautifulsoup4==4.12.3
-billiard==4.2.0
-blinker==1.8.2
-cachetools==5.5.0
-celery==5.3.6
-certifi==2024.2.2
-cffi==1.17.1
-charset-normalizer==3.3.2
-click==8.1.7
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.3.0
-colorama==0.4.6
-comm==0.2.2
-contourpy==1.2.1
-coverage==7.4.1
-cowsay==6.1
-crispy-bootstrap5==2024.10
-crispy-tailwind==0.5.0
-cryptography==44.0.0
-cycler==0.12.1
-debugpy==1.8.2
-decorator==5.1.1
-distro==1.9.0
-Django==4.2.6
-django-axes==6.1.1
-django-bootstrap5==24.3
-django-cors-headers==4.3.0
-django-crispy-forms==2.1
-django-debug-toolbar==4.2.0
-django-environ==0.11.2
-django-extensions==3.2.3
-django-filter==23.3
-django-guardian==2.4.0
-django-modeltranslation==0.19.13
-django-redis==5.4.0
-django-rest-auth==0.9.5
-django-simple-history==3.4.0
-django-storages==1.14.2
-django-tailwind==3.8.0
-django-tenant-schemas==1.11.0
+Django==5.0.1
 djangorestframework==3.14.0
-djangorestframework-simplejwt==5.3.0
-drf-yasg==1.21.7
-et-xmlfile==1.1.0
-executing==2.0.1
-fonttools==4.53.0
-gitdb==4.0.11
-GitPython==3.1.43
-gunicorn==21.2.0
-h11==0.14.0
-httpcore==1.0.8
-httpx==0.28.1
-idna==3.6
-inflection==0.5.1
-iniconfig==2.0.0
-ipykernel==6.29.4
-ipython==8.16.1
-jedi==0.19.1
-Jinja2==3.1.4
-jiter==0.9.0
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-kiwisolver==1.4.5
-kombu==5.3.5
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.9.0
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-narwhals==1.8.4
-nest-asyncio==1.6.0
-numpy==2.0.0
-opencv-python==4.8.1.78
-openpyxl==3.1.5
-ordered-set==4.1.0
-packaging==24.1
-pandas==2.2.2
-parso==0.8.4
-pdf2image==1.17.0
-pdfminer.six==20231228
-pdfplumber==0.11.5
-pickleshare==0.7.5
-Pillow==10.1.0
-platformdirs==4.2.2
-pluggy==1.5.0
-prompt-toolkit==3.0.43
-protobuf==5.28.2
-psutil==6.0.0
-psycopg2-binary==2.9.9
-pure-eval==0.2.2
-pyarrow==17.0.0
-pycparser==2.22
-pydantic==2.4.2
-pydantic_core==2.10.1
-pydeck==0.9.1
-Pygments==2.18.0
-PyJWT==2.10.1
-pyparsing==3.1.2
-PyPDF2==3.0.1
-pypdfium2==4.30.1
-pytesseract==0.3.10
-pytest==7.4.3
-pytest-django==4.5.2
-python-dateutil==2.8.2
-python-decouple==3.8
-python-dotenv==1.0.0
-pytz==2024.1
-pywin32==306
-PyYAML==6.0.2
-pyzmq==26.0.3
-redis==5.0.1
-referencing==0.35.1
+django-cors-headers==4.3.1
 requests==2.31.0
-rich==13.8.1
-rpds-py==0.20.0
-setuptools==75.8.0
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.1
-soupsieve==2.5
-sqlparse==0.5.0
-stack-data==0.6.3
-streamlit==1.38.0
+python-dotenv==1.0.0
+django-environ==0.11.2
+anthropic==0.18.1
 stripe==7.11.0
-tenacity==8.5.0
-toml==0.10.2
-tornado==6.4.1
-traitlets==5.14.3
-typing_extensions==4.12.2
-tzdata==2024.1
-Unidecode==1.3.8
-uritemplate==4.1.1
-urllib3==2.2.1
-vine==5.1.0
-watchdog==4.0.2
-wcwidth==0.2.13
-whitenoise==6.6.0
-XlsxWriter==3.2.2
+django-redis==5.4.0
+paypalrestsdk==1.13.1
+django-paypal==2.0
