--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,26 @@
-Django==5.0.1
-djangorestframework==3.14.0
-django-cors-headers==4.3.1
-requests==2.31.0
-python-dotenv==1.0.0
-django-environ==0.11.2
-anthropic==0.18.1
-stripe==7.11.0
-django-redis==5.4.0
-paypalrestsdk==1.13.1
-django-paypal==2.0
+annotated-types==0.7.0
+anthropic==0.49.0
+anyio==4.9.0
+asgiref==3.8.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
+distro==1.9.0
+Django==5.2
+djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.0
+h11==0.14.0
+httpcore==1.0.8
+httpx==0.28.1
+idna==3.10
+jiter==0.9.0
+pydantic==2.11.3
+pydantic_core==2.33.1
+PyJWT==2.9.0
+python-dotenv==1.1.0
+requests==2.32.3
+sniffio==1.3.1
+sqlparse==0.5.3
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
